--- a/ejs/ac.ejs
+++ b/ejs/ac.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
+    <title>
+        <%= head.ac %>
+    </title>
     <%- include("parcials/head") %>
 </head>
 
@@ -17,27 +20,49 @@
             <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Ana Carriço</h2>
-                    <h3><strong>Especialidade:</strong> Cardiologia Pediátrica</h3>
+                    <h2>
+                        <%= ac.name %>
+                    </h2>
+                    <h3><strong>
+                            <%= ac.specialty %>
+                        </strong>
+                        <%= ac.specialtyItems %>
+                    </h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
-                        <img src="../images/profile.png" alt="">
+                        <img src="<%= en %>../images/profile.png" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português e Inglês</p>
+                            <p><strong>
+                                    <%= ac.languages %>
+                                </strong>
+                                <%= ac.languagesItems %>
+                            </p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Insuficiência cardíaca</p>
+                            <p><strong>
+                                    <%= ac.illnesses %>
+                                </strong>
+                                <%= ac.illnessesItems %>
+                            </p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Exames:</strong> Ecocardiografia Fetal e Eco-Doppler Cardíaco Fetal</p>
+                            <p><strong>
+                                    <%= ac.appointment %>
+                                </strong>
+                                <%= ac.appointmentItems %>
+                            </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Medicina fetal e Ecocardiografia</p>
+                            <p><strong>
+                                    <%= ac.areasOfDifferentiation %>
+                                </strong>
+                                <%= ac.areasOfDifferentiationItems %>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -46,41 +71,76 @@
                         <div class="box9-background"></div>
                         <div class="bar-holder">
                             <div class="chevronDown"></div>
-                            <p>Atividade Clínica</p>
+                            <p>
+                                <%= ac.clinicalActivity.title %>
+                            </p>
                         </div>
                         <ul class="tab-holder">
-                            <li class="activity">Atividade Clínica</li>
-                            <li class="formation">Formação Académica</li>
-                            <li class="science">Atividade Científica</li>
-                            <li class="sociaty">Sociedades Científicas</li>
+                            <li class="activity">
+                                <%= ac.clinicalActivity.title %>
+                            </li>
+                            <li class="formation">
+                                <%= ac.academicEducation.title %>
+                            </li>
+                            <li class="science">
+                                <%= ac.scientificActivity.title %>
+                            </li>
+                            <li class="sociaty">
+                                <%= ac.scientificSocieties.title %>
+                            </li>
                         </ul>
                         <div class="activity">
-                            <h4>Atividade Clínica</h4>
+                            <h4>
+                                <%= ac.clinicalActivity.title %>
+                            </h4>
                         </div>
                         <div class="formation">
-                            <h4>Formação Académica</h4>
+                            <h4>
+                                <%= ac.academicEducation.title %>
+                            </h4>
                         </div>
                         <div class="science">
-                            <h4>Atividade Científica</h4>
+                            <h4>
+                                <%= ac.scientificActivity.title %>
+                            </h4>
                         </div>
                         <div class="sociaty">
-                            <h4>Sociedades Científicas</h4>
+                            <h4>
+                                <%= ac.scientificSocieties.title %>
+                            </h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Cardiologista pediátrica no Hospital da Luz Arrábida</li>
-                            <li>Desde 2008 - Assistente Hospitalar no Hospital de Vila Nova de Gaia</li>
-                            <li>Desde 2005 - Cardiologista pediátrica na Clínica Gynébe do Porto</li>
-                            <li>2004-2008 - Assistente Hospitalar Eventual no Hospital de São João, Porto</li>
-                            <li>1999-2004 - Internato Complementar no Hospital de São João, Porto</li>
+                            <li>
+                                <%= ac.clinicalActivity.l1 %>
+                            </li>
+                            <li>
+                                <%= ac.clinicalActivity.l2 %>
+                            </li>
+                            <li>
+                                <%= ac.clinicalActivity.l3 %>
+                            </li>
+                            <li>
+                                <%= ac.clinicalActivity.l4 %>
+                            </li>
+                            <li>
+                                <%= ac.clinicalActivity.l5 %>
+                            </li>
                         </ul>
                         <ul class="text-formation">
-                            <li>2004 - Grau de Especialista em Cardiologia Pediátrica</li>
-                            <li>1996 - Licenciatura em Medicina no Instituto de Ciências Biomédicas Abel Salazar, Porto
+                            <li>
+                                <%= ac.academicEducation.l1 %>
+                            </li>
+                            <li>
+                                <%= ac.academicEducation.l2 %>
                             </li>
                         </ul>
                         <ul class="text-science">
-                            <li>É autora de vários artigos, apresentações e comunicações livres.</li>
-                            <li>Pertenceu à comissão organizadora de várias reuniões científicas</li>
+                            <li>
+                                <%= ac.scientificActivity.l1 %>
+                            </li>
+                            <li>
+                                <%= ac.scientificActivity.l2 %>
+                            </li>
                         </ul>
                         <ul class="text-sociaty">
                         </ul>
@@ -92,11 +152,12 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="../js/app.js"></script>
-            <script src="../js/intersectionObservers.js"></script>
-            <script src="../js/headerNavbar.js"></script>
-            <script src="../js/headerNavbarButtons.js"></script>
-            <script src="../js/cv.js"></script>
+            <script src="<%= en %>../js/app.js"></script>
+            <script src="<%= en %>../js/intersectionObservers.js"></script>
+            <script src="<%= en %>../js/headerNavbar.js"></script>
+            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= en %>../js/cv.js"></script>
+            <script src="<%= en %>../js/languange.js"></script>
 </body>
 
 </html>
