--- a/ejs/agreements.ejs
+++ b/ejs/agreements.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
+    <title>
+        <%= head.agreements %>
+    </title>
     <%- include("parcials/head") %>
 </head>
 
@@ -25,7 +28,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://advancecare.pt/" target="_blank">
-                            <img src="../images/advancecare.png"
+                            <img src="<%= en %>../images/advancecare.png"
                                 alt="AdvanceCare - Gestão de Serviços de Saúde, S.A." />
                         </a>
                         <div class="title">
@@ -48,71 +51,72 @@
                 </div>
                 <div class="box2-wrapper6">
                     <div class="insurence fade-in">
-                        <img src="../images/acoreana.png" alt="Açoreana" />
+                        <img src="<%= en %>../images/acoreana.png" alt="Açoreana" />
                         <p>&brvbar Açoreana</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/ccmo.jpg" alt="CCMO-MUTUELLE" />
+                        <img src="<%= en %>../images/ccmo.jpg" alt="CCMO-MUTUELLE" />
                         <p>&brvbar CCMO-MUTUELLE</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/cimpor.png" alt="Cimpor - Cimentos de Portugal, S.A." />
+                        <img src="<%= en %>../images/cimpor.png" alt="Cimpor - Cimentos de Portugal, S.A." />
                         <p>&brvbar Cimpor - Cimentos de Portugal, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
+                        <img src="<%= en %>../images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
                         <p>&brvbar Eurovida – Companhia de Seguros de Vida, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/generali.png" alt="Generalicare" />
+                        <img src="<%= en %>../images/generali.png" alt="Generalicare" />
                         <p>&brvbar Generalicare - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/gnb.png" alt="GNB - Companhia de Seguros, S.A" />
+                        <img src="<%= en %>../images/gnb.png" alt="GNB - Companhia de Seguros, S.A" />
                         <p>&brvbar GNB - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/gps.jpg" alt="Grumo Groupama" />
+                        <img src="<%= en %>../images/gps.jpg" alt="Grumo Groupama" />
                         <p>&brvbar Grupo Groupama</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/logo.jpg" alt="Logo" />
+                        <img src="<%= en %>../images/logo.jpg" alt="Logo" />
                         <p>&brvbar Logo Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
+                        <img src="<%= en %>../images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
                         <p>&brvbar Lusitania - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/mgen.png" alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
+                        <img src="<%= en %>../images/mgen.png"
+                            alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
                         <p>&brvbar MGEN - Mutuelle Générale de l'Éducation Nationale</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/n_seguros.png" alt="N Seguros, S.A" />
+                        <img src="<%= en %>../images/n_seguros.png" alt="N Seguros, S.A" />
                         <p>&brvbar N Seguros, S.A</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
+                        <img src="<%= en %>../images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
                         <p>&brvbar Popular Seguros- Companhia de Seguros, S.A. </p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/real.png" alt="Real Vida Seguros" />
+                        <img src="<%= en %>../images/real.png" alt="Real Vida Seguros" />
                         <p>&brvbar Real Vida Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/sams.png"
+                        <img src="<%= en %>../images/sams.png"
                             alt="SAMS - Serviços de Assistência Médico-Social do Sindicato dos Bancários Sul e Ilhas" />
                         <p>&brvbar SAMS - Serviços de Assistência Médico-Social do Sindicato dos Bancários</p>
                     </div>
                     <div id="allianz" class="insurence fade-in">
-                        <img src="../images/tranquilidade.png" alt="Tranquilidade" />
+                        <img src="<%= en %>../images/tranquilidade.png" alt="Tranquilidade" />
                         <p>&brvbar Tranquilidade</p>
                     </div>
                 </div>
                 <div id="furureHealth" class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.allianz.pt/" target="_blank"></a>
-                        <img src="../images/allianz.png" alt="Allianz Saúde" />
+                        <img src="<%= en %>../images/allianz.png" alt="Allianz Saúde" />
                         <div class="title">
                             <h3 class="h3__inset1">
                                 <%= agreements.allianz.title %>
@@ -128,7 +132,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.future-healthcare.pt/victoria/rm/rede-medica.html" target="_blank">
-                            <img src="../images/future.png" alt="Future Healthcare" />
+                            <img src="<%= en %>../images/future.png" alt="Future Healthcare" />
                         </a>
                         <div class="title">
                             <h3 class="h3_inset1">
@@ -152,18 +156,18 @@
                 </div>
                 <div class="box2-wrapper6">
                     <div class="insurence fade-in">
-                        <img src="../images/saude.png" alt="Saúde Prime" />
+                        <img src="<%= en %>../images/saude.png" alt="Saúde Prime" />
                         <p>&brvbar Saúde Prime</p>
                     </div>
                     <div id="medicare" class="insurence fade-in">
-                        <img src="../images/victoria.png" alt="Victoria" />
+                        <img src="<%= en %>../images/victoria.png" alt="Victoria" />
                         <p>&brvbar Victoria</p>
                     </div>
                 </div>
                 <div id="medis" class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="https://www.medicare.pt/" target="_blank">
-                            <img src="../images/medicare.jpg" alt="Medicare" />
+                            <img src="<%= en %>../images/medicare.jpg" alt="Medicare" />
                         </a>
                         <div class="title">
                             <h3 class="h3__inset1">
@@ -180,7 +184,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.medis.pt/pt-pt/Pages/default.aspx" target="_blank">
-                            <img src="../images/medis.png"
+                            <img src="<%= en %>../images/medis.png"
                                 alt="Médis - Companhia Portuguesa de Seguros de Saúde, S.A." />
                         </a>
                         <div class="title">
@@ -204,26 +208,26 @@
                 </div>
                 <div class=" box2-wrapper6">
                     <div class="insurence fade-in">
-                        <img src="../images/ageas.png" alt="Ageas Seguros" />
+                        <img src="<%= en %>../images/ageas.png" alt="Ageas Seguros" />
                         <p>&brvbar Ageas Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/ctt.png" alt="CTT - Médis" />
+                        <img src="<%= en %>../images/ctt.png" alt="CTT - Médis" />
                         <p>&brvbar CTT - Médis</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/liberty.png" alt="Liberty Seguros" />
+                        <img src="<%= en %>../images/liberty.png" alt="Liberty Seguros" />
                         <p>&brvbar Liberty Seguros</p>
                     </div>
                     <div id="rna" class="insurence fade-in">
-                        <img src="../images/zurich.png" alt="Zurich" />
+                        <img src="<%= en %>../images/zurich.png" alt="Zurich" />
                         <p>&brvbar Zurich</p>
                     </div>
                 </div>
                 <div id="samsSib" class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.rnamedical.pt/pt/home/" target="_blank">
-                            <img src="../images/rna.png" alt="RNA Medical" />
+                            <img src="<%= en %>../images/rna.png" alt="RNA Medical" />
                         </a>
                         <div class="title">
                             <h3>
@@ -241,7 +245,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.sibanca.pt/" target="_blank">
-                            <img src="../images/sams_sib.png" alt="SAMS-SIB" />
+                            <img src="<%= en %>../images/sams_sib.png" alt="SAMS-SIB" />
                         </a>
                         <div class="title">
                             <h3 class="h3__inset1">
@@ -258,7 +262,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="https://ami.org.pt/" target="_blank">
-                            <img src="../images/ami.png" alt="Assistência Médica Internacional" />
+                            <img src="<%= en %>../images/ami.png" alt="Assistência Médica Internacional" />
                         </a>
                         <div class="title">
                             <h3 class="h3__inset1">
@@ -278,11 +282,12 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="../js/app.js"></script>
-            <script src="../js/intersectionObservers.js"></script>
-            <script src="../js/headerNavbar.js"></script>
-            <script src="../js/headerNavbarButtons.js"></script>
-            <script src="../js/buttonOnAgreements.js"></script>
+            <script src="<%= en %>../js/app.js"></script>
+            <script src="<%= en %>../js/intersectionObservers.js"></script>
+            <script src="<%= en %>../js/headerNavbar.js"></script>
+            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= en %>../js/buttonOnAgreements.js"></script>
+            <script src="<%= en %>../js/languange.js"></script>
 </body>
 
 </html>
