--- a/ejs/gallery.ejs
+++ b/ejs/gallery.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
+    <title>
+        <%= head.gallery %>
+    </title>
     <%- include("parcials/head") %>
 </head>
 
@@ -28,7 +31,7 @@
             </div>
             <div class="box6-wrapper1">
                 <div class="box6 img1 fade-in">
-                    <img src="../images/EVO_1662.jpg" alt="Sala de Espera" />
+                    <img src="<%= en %>../images/EVO_1662.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -39,7 +42,7 @@
                     </span>
                 </div>
                 <div class="box6 img2 fade-in">
-                    <img src="../images/EVO_1675.jpg" alt="Sala de Espera" />
+                    <img src="<%= en %>../images/EVO_1675.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -50,7 +53,7 @@
                     </span>
                 </div>
                 <div class="box6 img3 fade-in">
-                    <img src="../images/EVO_1687.jpg" alt="Sala de Espera" />
+                    <img src="<%= en %>../images/EVO_1687.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -61,7 +64,7 @@
                     </span>
                 </div>
                 <div class="box6 img4 fade-in">
-                    <img src="../images/EVO_1711.jpg" alt="Corredor" />
+                    <img src="<%= en %>../images/EVO_1711.jpg" alt="Corredor" />
                     <span class="img-content-hover">
                         <h4>
                             <%= gallery.images.area %>
@@ -69,7 +72,7 @@
                     </span>
                 </div>
                 <div class="box6 img5 fade-in">
-                    <img src="../images/EVO_1714.jpg" alt="Sala de Pediatria" />
+                    <img src="<%= en %>../images/EVO_1714.jpg" alt="Sala de Pediatria" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -80,7 +83,7 @@
                     </span>
                 </div>
                 <div class="box6 img6 fade-in">
-                    <img src="../images/EVO_1720.jpg" alt="Sala de Pediatria" />
+                    <img src="<%= en %>../images/EVO_1720.jpg" alt="Sala de Pediatria" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -91,7 +94,7 @@
                     </span>
                 </div>
                 <div class="box6 img7 fade-in">
-                    <img src="../images/EVO_1725.jpg" alt="Sala de Pediatria" />
+                    <img src="<%= en %>../images/EVO_1725.jpg" alt="Sala de Pediatria" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -102,7 +105,7 @@
                     </span>
                 </div>
                 <div class="box6 img8 fade-in">
-                    <img src="../images/EVO_1732.jpg" alt="Sala de Exames" />
+                    <img src="<%= en %>../images/EVO_1732.jpg" alt="Sala de Exames" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -113,7 +116,7 @@
                     </span>
                 </div>
                 <div class="box6 img9 fade-in">
-                    <img src="../images/EVO_1737.jpg" alt="Sala de Exames" />
+                    <img src="<%= en %>../images/EVO_1737.jpg" alt="Sala de Exames" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -124,7 +127,7 @@
                     </span>
                 </div>
                 <div class="box6 img10 fade-in">
-                    <img src="../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -135,7 +138,7 @@
                     </span>
                 </div>
                 <div class="box6 img11 fade-in">
-                    <img src="../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -146,7 +149,7 @@
                     </span>
                 </div>
                 <div class="box6 img12 fade-in">
-                    <img src="../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -157,7 +160,7 @@
                     </span>
                 </div>
                 <div class="box6 img13 fade-in">
-                    <img src="../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -168,7 +171,7 @@
                     </span>
                 </div>
                 <div class="box6 img14 fade-in">
-                    <img src="../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -179,7 +182,7 @@
                     </span>
                 </div>
                 <div class="box6 img15 fade-in">
-                    <img src="../images/EVO_1782.jpg" alt="Copa" />
+                    <img src="<%= en %>../images/EVO_1782.jpg" alt="Copa" />
                     <span class="img-content-hover">
                         <h4>
                             <%= gallery.images.copa %>
@@ -187,7 +190,7 @@
                     </span>
                 </div>
                 <div class="box6 img16 fade-in">
-                    <img src="../images/EVO_1790.jpg" alt="Quarto de Banho" />
+                    <img src="<%= en %>../images/EVO_1790.jpg" alt="Quarto de Banho" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.babyChangingRoom %>
@@ -198,7 +201,7 @@
                     </span>
                 </div>
                 <div class="box6 img17 fade-in">
-                    <img src="../images/EVO_1795.jpg" alt="Sala de Esterilização" />
+                    <img src="<%= en %>../images/EVO_1795.jpg" alt="Sala de Esterilização" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -214,55 +217,55 @@
                 <div class="wrapper">
                     <div class="slides">
                         <span class="slide">
-                            <img src="../images/EVO_1662.jpg" alt="Sala de Espera" />
+                            <img src="<%= en %>../images/EVO_1662.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1675.jpg" alt="Sala de Espera" />
+                            <img src="<%= en %>../images/EVO_1675.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1687.jpg" alt="Sala de Espera" />
+                            <img src="<%= en %>../images/EVO_1687.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1711.jpg" alt="Corredor" />
+                            <img src="<%= en %>../images/EVO_1711.jpg" alt="Corredor" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1714.jpg" alt="Sala de Pediatria" />
+                            <img src="<%= en %>../images/EVO_1714.jpg" alt="Sala de Pediatria" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1720.jpg" alt="Sala de Pediatria" />
+                            <img src="<%= en %>../images/EVO_1720.jpg" alt="Sala de Pediatria" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1725.jpg" alt="Sala de Pediatria" />
+                            <img src="<%= en %>../images/EVO_1725.jpg" alt="Sala de Pediatria" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1732.jpg" alt="Sala de Exames" />
+                            <img src="<%= en %>../images/EVO_1732.jpg" alt="Sala de Exames" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1737.jpg" alt="Sala de Exames" />
+                            <img src="<%= en %>../images/EVO_1737.jpg" alt="Sala de Exames" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1782.jpg" alt="Copa" />
+                            <img src="<%= en %>../images/EVO_1782.jpg" alt="Copa" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1790.jpg" alt="Quarto de Banho" />
+                            <img src="<%= en %>../images/EVO_1790.jpg" alt="Quarto de Banho" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1795.jpg" alt="Sala de Esterilização" />
+                            <img src="<%= en %>../images/EVO_1795.jpg" alt="Sala de Esterilização" />
                         </span>
                     </div>
                 </div>
@@ -274,12 +277,13 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="../js/app.js"></script>
-            <script src="../js/intersectionObservers.js"></script>
-            <script src="../js/headerNavbar.js"></script>
-            <script src="../js/headerNavbarButtons.js"></script>
-            <script src="../js/carousel.js"></script>
-            <script src="../js/gallery.js"></script>
+            <script src="<%= en %>../js/app.js"></script>
+            <script src="<%= en %>../js/intersectionObservers.js"></script>
+            <script src="<%= en %>../js/headerNavbar.js"></script>
+            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= en %>../js/carousel.js"></script>
+            <script src="<%= en %>../js/gallery.js"></script>
+            <script src="<%= en %>../js/languange.js"></script>
 </body>
 
 </html>
