--- a/ejs/parcials/footer.ejs
+++ b/ejs/parcials/footer.ejs
@@ -1,4 +1,11 @@
 <footer id="footer">
+    <div class="languangeButton">
+        <a href="">
+            <i class="fas fa-globe"></i>
+            <span>PT/</span>
+            <span>EN</span>
+        </a>
+    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -16,10 +23,10 @@
                         <%= footer.index %>
                     </a></li>
                 <li class="fade-in"><a href="specialties.html">
-                        <%= footer.specialties %> >
+                        <%= footer.specialties %>
                     </a></li>
                 <li class="fade-in"><a href="agreements.html">
-                        <%= footer.agreements %> >
+                        <%= footer.agreements %>
                     </a></li>
                 <li class="fade-in"><a href="contacts.html">
                         <%= footer.contacts %>
