--- a/ejs/parcials/header.ejs
+++ b/ejs/parcials/header.ejs
@@ -94,37 +94,37 @@
                 </a>
                 <div class="dropdown dropdownAgreements">
                     <ul>
-                        <li><img src="../images/advanceCare_logo.png" alt="Advancecare Logo">
+                        <li><img src="<%= en %>../images/advanceCare_logo.png" alt="Advancecare Logo">
                             <a href="agreements.html#advanceCare">
                                 <%= header.agreements.advanceCare %>
                             </a>
                         </li>
-                        <li><img src="../images/allianz_logo.png" alt="Allianz Logo">
+                        <li><img src="<%= en %>../images/allianz_logo.png" alt="Allianz Logo">
                             <a href="agreements.html#allianz">
                                 <%= header.agreements.allianz %>
                             </a>
                         </li>
-                        <li><img src="../images/fh_logo.png" alt="Future Healthcare Logo">
+                        <li><img src="<%= en %>../images/fh_logo.png" alt="Future Healthcare Logo">
                             <a href="agreements.html#furureHealth">
                                 <%= header.agreements.futureHealthcare %>
                             </a>
                         </li>
-                        <li><img src="../images/medicare_logo.png" alt="Medicare Logo">
+                        <li><img src="<%= en %>../images/medicare_logo.png" alt="Medicare Logo">
                             <a href="agreements.html#medicare">
                                 <%= header.agreements.medicare %>
                             </a>
                         </li>
-                        <li><img src="../images/medis_logo.png" alt="Médis Logo">
+                        <li><img src="<%= en %>../images/medis_logo.png" alt="Médis Logo">
                             <a href="agreements.html#medis">
                                 <%= header.agreements.medis %>
                             </a>
                         </li>
-                        <li><img src="../images/rna_logo.png" alt="RNA Logo">
+                        <li><img src="<%= en %>../images/rna_logo.png" alt="RNA Logo">
                             <a href="agreements.html#rna">
                                 <%= header.agreements.rna %>
                             </a>
                         </li>
-                        <li><img src="../images/sib_logo.png" alt="SAMS/SIB Logo">
+                        <li><img src="<%= en %>../images/sib_logo.png" alt="SAMS/SIB Logo">
                             <a href="agreements.html#samsSib">
                                 <%= header.agreements.samsSib %>
                             </a>
