--- a/ejs/privacy.ejs
+++ b/ejs/privacy.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
+    <title>
+        <%= head.privacy %>
+    </title>
     <%- include("parcials/head") %>
 </head>
 
@@ -22,57 +25,66 @@
                 </div>
                 <div class="box7-wrapper1">
                     <div class="box7 fadeIn">
-                        <p>A sua privacidade é importante para nós. É política do Clínica Gynébe respeitar a sua
-                            privacidade em relação a qualquer informação sua que possamos recolher no site da<a
-                                href=https://clinicagynebe.com.pt>Clínica Gynébe</a>, e outros sites que
-                            possuímos e operamos.</p>
-                        <p>Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe
-                            fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e
-                            consentimento.</p>
-                        <p>Apenas retemos as informações recolhidas pelo tempo necessário para fornecer o
-                            serviço solicitado. Quando armazenamos dados, protegemo-los dentro de meios
-                            comercialmente aceitáveis ​​para evitar perdas e roubos, bem como acesso,
-                            divulgação, cópia, uso ou modificações não autorizados.</p>
+                        <p>
+                            <%= privacy.p1 %>
+                                <a href=https://clinicagynebe.com.pt>
+                                    <%= privacy.name %>
+                                </a>
+                                <%= privacy.p2 %>
+                        </p>
+                        <p>
+                            <%= privacy.p3 %>
+                        </p>
+                        <p>
+                            <%= privacy.p4 %>
+                        </p>
                     </div>
 
                     <div class="box7 fadeIn">
-                        <p>Não compartilhamos informações de identificação pessoal publicamente ou com
-                            terceiros, exceto quando exigido por lei.</p>
-                        <p>O nosso site pode ter links para sites externos que não são operados por nós. Esteja
-                            ciente de que não temos controle sobre o conteúdo e práticas desses sites e não
-                            podemos aceitar responsabilidade por suas respectivas <a
-                                href='https://politicaprivacidade.com' target='_BLANK'>políticas de
-                                privacidade</a>. </p>
-                        <p>Qualquer pessoa é livre de recusar a nossa solicitação de informações pessoais,
-                            entendendo que
-                            talvez não possamos fornecer alguns dos serviços desejados.</p>
-                        <p>O uso continuado de nosso site será considerado como aceitação de nossas práticas em
-                            torno de privacidade e informações pessoais. Se você tiver alguma dúvida sobre como
-                            lidamos com dados do usuário e informações pessoais, entre em contacto connosco.</p>
+                        <p>
+                            <%= privacy.p5 %>
+                        </p>
+                        <p>
+                            <%= privacy.p6 %>
+                                <a href='https://politicaprivacidade.com' target='_BLANK'>
+                                    <%= privacy.pp %>
+                                </a>
+                        </p>
+                        <p>
+                            <%= privacy.p7 %>
+                        </p>
+                        <p>
+                            <%= privacy.p8 %>
+                        </p>
                     </div>
 
                     <div class="box7 fadeIn">
-                        <h6>Compromisso do Usuário</h6>
-                        <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o
-                            Clínica Gynébe oferece no site e com caráter enunciativo, mas não limitativo:</p>
+                        <h6>
+                            <%= privacy.subtitle %>
+                        </h6>
+                        <p>
+                            <%= privacy.p9 %>
+                        </p>
                         <ul>
-                            <li>A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à
-                                ordem pública;</li>
-                            <li>B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, ou
-                                apostas online, jogos de sorte e azar, qualquer tipo de pornografia ilegal, de
-                                apologia ao terrorismo ou contra os direitos humanos;</li>
-                            <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) da
-                                Clínica Gynébe, de seus fornecedores ou terceiros, para introduzir ou disseminar
-                                vírus informáticos ou quaisquer outros sistemas de hardware ou software que
-                                sejam capazes de causar danos anteriormente mencionados.</li>
+                            <li>
+                                <%= privacy.p10.l1 %>
+                            </li>
+                            <li>
+                                <%= privacy.p10.l2 %>
+                            </li>
+                            <li>
+                                <%= privacy.p10.l3 %>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="box7 fadeIn">
-                        <h6>Mais informações</h6>
-                        <p>Esperemos que esteja esclarecido e, como mencionado anteriormente, se houver algo de
-                            que não tem certeza se precisa ou não, geralmente é mais seguro deixar os cookies
-                            ativados, caso interaja com um dos recursos que usa no nosso site.</p>
+                        <h6>
+                            <%= privacy.subtitle2 %>
+                        </h6>
+                        <p>
+                            <%= privacy.p11 %>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -81,10 +93,11 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="../js/app.js"></script>
-            <script src="../js/intersectionObservers.js"></script>
-            <script src="../js/headerNavbar.js"></script>
-            <script src="../js/headerNavbarButtons.js"></script>
+            <script src="<%= en %>../js/app.js"></script>
+            <script src="<%= en %>../js/intersectionObservers.js"></script>
+            <script src="<%= en %>../js/headerNavbar.js"></script>
+            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= en %>../js/languange.js"></script>
 </body>
 
 </html>
