--- a/ejs/galleryST.ejs
+++ b/ejs/galleryST.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
+    <title>
+        <%= head.galleryST %>
+    </title>
     <%- include("parcials/head") %>
 </head>
 
@@ -28,7 +31,7 @@
             </div>
             <div class="box6-wrapper1__inset1">
                 <div class="box6 img18 fade-in">
-                    <img src="../images/EVO_1810.jpg" alt="Sala de Espera" />
+                    <img src="<%= en %>../images/EVO_1810.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -39,7 +42,7 @@
                     </span>
                 </div>
                 <div class="box6 img19 fade-in">
-                    <img src="../images/EVO_1813.jpg" alt="Sala de Espera" />
+                    <img src="<%= en %>../images/EVO_1813.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -50,7 +53,7 @@
                     </span>
                 </div>
                 <div class="box6 img20 fade-in">
-                    <img src="../images/EVO_1818.jpg" alt="Sala de Espera" />
+                    <img src="<%= en %>../images/EVO_1818.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -61,7 +64,7 @@
                     </span>
                 </div>
                 <div class="box6 img21 fade-in">
-                    <img src="../images/EVO_1826.jpg" alt="Logo" />
+                    <img src="<%= en %>../images/EVO_1826.jpg" alt="Logo" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.logoText %>
@@ -72,7 +75,7 @@
                     </span>
                 </div>
                 <div class="box6 img22 fade-in">
-                    <img src="../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -83,7 +86,7 @@
                     </span>
                 </div>
                 <div class="box6 img23 fade-in">
-                    <img src="../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -94,7 +97,7 @@
                     </span>
                 </div>
                 <div class="box6 img24 fade-in">
-                    <img src="../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= en %>../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -110,25 +113,25 @@
                 <div class="wrapper">
                     <div class="slides">
                         <span class="slide">
-                            <img src="../images/EVO_1810.jpg" alt="Sala de Espera" />
+                            <img src="<%= en %>../images/EVO_1810.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1813.jpg" alt="Sala de Espera" />
+                            <img src="<%= en %>../images/EVO_1813.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1818.jpg" alt="Sala de Espera" />
+                            <img src="<%= en %>../images/EVO_1818.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1826.jpg" alt="Logo" />
+                            <img src="<%= en %>../images/EVO_1826.jpg" alt="Logo" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= en %>../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                     </div>
                 </div>
@@ -140,12 +143,13 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="../js/app.js"></script>
-            <script src="../js/intersectionObservers.js"></script>
-            <script src="../js/headerNavbar.js"></script>
-            <script src="../js/headerNavbarButtons.js"></script>
-            <script src="../js/carousel.js"></script>
-            <script src="../js/galleryST.js"></script>
+            <script src="<%= en %>../js/app.js"></script>
+            <script src="<%= en %>../js/intersectionObservers.js"></script>
+            <script src="<%= en %>../js/headerNavbar.js"></script>
+            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= en %>../js/carousel.js"></script>
+            <script src="<%= en %>../js/galleryST.js"></script>
+            <script src="<%= en %>../js/languange.js"></script>
 </body>
 
 </html>
