--- a/ejs/parcials/head.ejs
+++ b/ejs/parcials/head.ejs
@@ -1,6 +1,3 @@
-<title>
-    Test
-</title>
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -11,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- build:css({.tmp,src}) css/style.css -->
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/styles.css">
+<link rel="stylesheet" href="<%= en %>../css/reset.css">
+<link rel="stylesheet" href="<%= en %>../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
