--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -6,6 +6,7 @@
             <%= head.index %>
         </title>
         <%- include("parcials/head") %>
+            <meta name="google-site-verification" content="53MDoHSYLfPjjOB4xKOcpDzR1PWCV3m-4wi6nup6TRU" />
     </head>
 
     <body>
